--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/melodic/gpu_voxels
-	previous = 
-	base = ab05fca
+	previous = ab05fca
+	base = e3e3f57
 	trim = 
 	trimbase = 
