--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/melodic/gpu_voxels
-	previous = 
-	base = 5053e67
+	previous = 5053e67
+	base = 24aae23
 	trim = 
 	trimbase = 
