--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>BSD-3</license>
+  <license>CDDL</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
